# musashi_related

./: README.md
Code/backup/musashi_mini_ws/src/MPCC/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  config.h  install.sh  main.cpp  main1.cpp  package.xml  types.cpp  types.h
Code/backup/musashi_mini_ws/src/MPCC/Constraints/: bounds.cpp  constraints.cpp  constraints.h
Code/backup/musashi_mini_ws/src/MPCC/Cost/: cost.cpp  cost.h
Code/backup/musashi_mini_ws/src/MPCC/Interfaces/: hpipm_interface.h
Code/backup/musashi_mini_ws/src/MPCC/MPC/: mpc.cpp  mpc.h
Code/backup/musashi_mini_ws/src/MPCC/Model/: integrator.cpp  model.cpp  model.h
Code/backup/musashi_mini_ws/src/MPCC/Params/: bounds.json  config.json  cost.json  model.json  normalization.json  params.cpp  params.h  track.cpp  track.h
Code/backup/musashi_mini_ws/src/MPCC/Plotting/: plotting.cpp
Code/backup/musashi_mini_ws/src/MPCC/Spline/: arc_length_spline.cpp  cubic_spline.cpp  cubic_spline.h
Code/backup/musashi_mini_ws/src/MPCC/Tests/: constratins_test.cpp  constratins_test.h  cost_test.cpp  model_integrator_test.cpp  spline_test.cpp
Code/backup/musashi_mini_ws/src/MPCC/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
Code/backup/musashi_mini_ws/src/MPCC/catkin_generated/: generate_cached_setup.py  ordered_paths.cmake  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
Code/backup/musashi_mini_ws/src/MPCC/catkin_generated/installspace/: .rosinstall  local_setup.sh  model_predictive_contouring_control.pc  model_predictive_contouring_controlConfig.cmake  setup.sh
Code/backup/musashi_mini_ws/src/MPCC/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Code/backup/musashi_mini_ws/src/MPCC/devel/lib/model_predictive_contouring_control/: MPCC
Code/backup/musashi_mini_ws/src/MPCC/devel/lib/pkgconfig/: model_predictive_contouring_control.pc
Code/backup/musashi_mini_ws/src/MPCC/devel/share/model_predictive_contouring_control/cmake/: model_predictive_contouring_controlConfig.cmake
Code/backup/musashi_mini_ws/src/MPCC/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Code/backup/musashi_mini_ws/src/MPCC/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Code/backup/musashi_mini_ws/src/MPCC/gtest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Mail_Exchange/: 202304.zi_  2023090117312057.zi_  2023091238423080.zi_  2023102040380084.zi_  2023110355436009.zi_  2023111448639033.zi_  2023111546479012.zi_  2023112334581015.zi_
Mail_Exchange/2023090117312057/: _History_of_modified_by_MAI.txt  start_controller.sh  ЧvЦ]ОЦНАБEХёНР_ItemsБEreport_23.09.01.xlsx
Mail_Exchange/2023091238423080/: global_trajectory1.cpp  route_sender.ppy  ЧvЦ]ОЦНАБEХёНР_ItemsБEreport_23.09.12.xlsx
Mail_Exchange/20230917/: standby_mode.mov  要望事項・報告_Items・report_23.09.13.xlsx
Mail_Exchange/20230925/: ùvû]ÄûìÇüEò±ìÉ_ItemsüEreport_23.09.25.xlsx
Mail_Exchange/2023110355436009/: passcode.txt  pure_pursuit.cpp  (+2 more)
(+117 files in other folders)
